# aahanaggarwal.github.io

./: .gitignore  .replit  404.html  CLAUDE.md  CNAME  OPTIMIZATION_REPORT.md  README.md  add_album.py  asset-manifest.json  dev.sh  index.html  main.js  manifest.json  pics.html  rename.py  server.py  style.css  timer.html  trips.html  update_blog.py  verify_spa.py  verify_timer.py
.agent/workflows/: build.md
.gemini/: pong_styles.css
.github/workflows/: deploy.yml
202409/: 461313316_878249317605745_2004424254516054793_n_18007214213459424.heic
blog/: index.html  posts.json  view.html
blog/posts/: 2025-11-20-initializing.md  first-post.html
graph/: index.html
pics/: index.html  index.json
pics/yellowstone-2023/: 67.heic
pong/: index.html  main.js
sand/: index.html  main.js
static/css/: 2.37ccd3f8.chunk.css  2.37ccd3f8.chunk.css.map  2.53d333a8.chunk.css  2.53d333a8.chunk.css.map  2.eaef12bb.chunk.css  2.eaef12bb.chunk.css.map  main.0a517310.chunk.css  main.0a517310.chunk.css.map  main.278d7bf4.chunk.css  main.278d7bf4.chunk.css.map  main.3e687e6f.chunk.css  main.3e687e6f.chunk.css.map  main.caecc2c7.chunk.css  (+3 more)
tools/optimizer/: Cargo.toml
tools/optimizer/src/: main.rs
trips/: index.json
tron/: index.html  main.js
wasm/: Cargo.toml
wasm/graph/: Cargo.toml
wasm/graph/src/: lib.rs
wasm/pong/: Cargo.toml
wasm/pong/src/: lib.rs
wasm/sand/: Cargo.toml
wasm/sand/src/: lib.rs
wasm/sand/tests/: bench.rs  sim.rs
wasm/src/: lib.rs
wasm/tron/: Cargo.toml
wasm/tron/src/: lib.rs
website/: index.html  package-lock.json  package.json
(+50 files in other folders)
