[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
minify-html = "0.15"
lightningcss = "1.0.0-alpha.58"
oxc_minifier = "0.26.0"
oxc_allocator = "0.26.0"
oxc_parser = "0.26.0"
oxc_span = "0.26.0"
oxc_codegen = "0.26.0"
walkdir = "2"
anyhow = "1.0"
fs_extra = "1.3"
rayon = "1.8"
regex = "1.10"
